Создание блока header: изменения в html и css файлах

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="logo logo_place_header" alt="Яндекс Практикум лого"></div>
+      <div class="header__title">Научиться учиться</div>
+      <div class="header__subtitle">Как современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href='#' class="link link_place_header">Узнать -></a></div>
+      <div class="header__main-illustration"></div>
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
