--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <header class="header">
       <div class="logo logo_place_header" alt="Яндекс Практикум лого"></div>
       <div class="header__title">Научиться учиться</div>
-      <div class="header__subtitle">Как современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href='#' class="link link_place_header">Узнать -></a></div>
+      <div class="header__subtitle">Как современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href='#' class="link">Узнать -></a></div>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-colums">
+          <div class="two-colums__breif"><h3 class="h3 link">Главные проблемы в обучении</h3></div>
+          <div class="two-colums__main-text">
+            <div class="two-colums__paragraph">Ни в школе, ни в институте нас не научат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зарубежка быстро выветривается и не приносит пользы.</div>
+            <div class="two-colums__paragraph"><span class="span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то мало где учат. Что с этим делать?</div>
+            <div class="two-colums__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются применяются на примере обучения в Практикуме</div>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
