Изменение фона и добавление альтов к картинкам

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header" alt="Яндекс Практикум лого"></div>
+      <div class="header__logo"><img class="logo" src="images/logo_place_header.svg" alt="Logo"></div>
       <div class="header__title">Научиться учиться</div>
       <div class="header__subtitle">Как современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href='#' class="link">Узнать -></a></div>
-      <div class="header__main-illustration"></div>
+      <div class="header__main-illustration"><img class="main-illustration_place_header" src="images/two_again.png" alt="two_again"></div>
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
