Добавлена секция digits в html и css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,44 @@
       </section>
 
       <section class="digits">
+        <div class="digits__section-title"><h1 class="h1 h1_place_digits">Цифры и факты</h1></div>
+        <div class="digits__section-subtitle"><h2 class="h2 h2_place_digits">Про учебу и мозг</p><div>
+        <div class="table">
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">86 миллиардов</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Число нейронов в мозге человека</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">2,1 миллиарда</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Число нуждающихся в повышении квалификации</p></div>
+            <div class="table__text"><p class="p p_place_digits">Всемирный Банк, 2017</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">1000 терабайт</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Объём памяти человека</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">500 триллионов</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Число ответственных за обучение нервных синапсов у взрослого человека</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">420 миллионов</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p></div>
+            <div class="table__text"><p class="p p_place_digits">Всемирный Банк, 2017</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">17-20 лет</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Пик обучаемости</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">1885 год</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Открытие кривой забывания</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3 class="h3 h3_place_digits">1889 год</h3></div>
+            <div class="table__text"><p class="p p_place_digits">Открытие условного рефлекса</p></div>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
