Добавлен блок feynman в HTML и CSS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <section class="digits">
         <div class="digits__section-title"><h1 class="h1 h1_place_digits">Цифры и факты</h1></div>
-        <div class="digits__section-subtitle"><h2 class="h2 h2_place_digits">Про учебу и мозг</p><div>
+        <div class="digits__section-subtitle"><h2 class="h2 h2_place_digits">Про учебу и мозг</h2></div>
         <div class="table">
           <div class="table__cell">
             <div class="table__heading"><h3 class="h3 h3_place_digits">86 миллиардов</h3></div>
@@ -70,6 +70,18 @@
       </section>
 
       <section class="feynman">
+        <div class="feynman__title">
+          <h1 class="h1 h1_place_feynman">Метод Фейнмана</h1>
+        </div>
+        <div class="feynman__subtitle">
+          <h2 class="h2 h2_place_feynman">Выучить не забыть</h2>
+        </div>
+        <div class="feynman__link">
+          <a class="link link_place_feynman" href="#">Подробнее -></a>
+        </div>
+        <div class="feynman__image">
+          <img class="feynman__image-position" src="images/feynman.png" alt="feyman-png">
+        </div>
       </section>
 
       <section class="kaufman">
