--- a/index.html
+++ b/index.html
@@ -31,40 +31,40 @@
       <section class="digits">
         <div class="digits__section-title"><h1 class="h1 h1_place_digits">Цифры и факты</h1></div>
         <div class="digits__section-subtitle"><h2 class="h2 h2_place_digits">Про учебу и мозг</h2></div>
-        <div class="table">
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">86 миллиардов</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Число нейронов в мозге человека</p></div>
+        <div class="table-digits">
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">86 миллиардов</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Число нейронов в мозге человека</p></div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">2,1 миллиарда</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Число нуждающихся в повышении квалификации</p></div>
-            <div class="table__text"><p class="p p_place_digits">Всемирный Банк, 2017</p></div>
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">2,1 миллиарда</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Число нуждающихся в повышении квалификации</p></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Всемирный Банк, 2017</p></div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">1000 терабайт</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Объём памяти человека</p></div>
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">1000 терабайт</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Объём памяти человека</p></div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">500 триллионов</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Число ответственных за обучение нервных синапсов у взрослого человека</p></div>
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">500 триллионов</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Число ответственных за обучение нервных синапсов у взрослого человека</p></div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">420 миллионов</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p></div>
-            <div class="table__text"><p class="p p_place_digits">Всемирный Банк, 2017</p></div>
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">420 миллионов</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Всемирный Банк, 2017</p></div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">17-20 лет</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Пик обучаемости</p></div>
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">17-20 лет</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Пик обучаемости</p></div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">1885 год</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Открытие кривой забывания</p></div>
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">1885 год</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Открытие кривой забывания</p></div>
           </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3 class="h3 h3_place_digits">1889 год</h3></div>
-            <div class="table__text"><p class="p p_place_digits">Открытие условного рефлекса</p></div>
+          <div class="table-digits__cell">
+            <div class="table-digits__heading"><h3 class="h3 h3_place_digits">1889 год</h3></div>
+            <div class="table-digits__text"><p class="p p_place_digits">Открытие условного рефлекса</p></div>
           </div>
         </div>
       </section>
@@ -85,10 +85,78 @@
       </section>
 
       <section class="kaufman">
+        <div class="section-title section-title_theme_dark"><h1 class="h1 h1_place_kaufman">Принципы обучения</h1></div>
+        <div class="section-subtitle section-subtitle_theme_dark"><h2 class="h2 h2_place_kaufman">от Джоша Кауфмана</h2></div>
+        <div class="table-kaufman">
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">1</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Выберите привлекательный проект.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">2</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Сосредоточьтесь на каком-то одном навыке.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">3</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Определите целевой уровень мастерства.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">4</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Разбейте навык на элементы.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">5</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Приготовьте всё необходмое для занятий.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">6</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Устраните припятствия для занятий.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">7</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Выделите специальное время для занятий.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">8</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Создайте быстрые петли обратной связи.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">9</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Занимайтесь по расписанию, короткими интенсивными интервалами.</p></div>
+          </div>
+          <div class="table-kaufman__cell table-kaufman__cell_theme_dark">
+            <div class="table-kaufman__heading table-kaufman__heading_theme_dark"><h3 class="h3 h3_place_kaufman">10</h3></div>
+            <div class="table-kaufman__text table-kaufman__text_theme_dark"><p class="p p_place_kaufman">Уделяйте внимание количеству и скорости.</p></div>
+          </div>
+        </div>
+        <div class="kaufman__triangle">
+          <img class="kaufman__triangle-image" src="images/kaufman-triangle.svg" alt="kaufman-triangle">
+        </div>
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="Logo">
+          <div class="footer__author"><p class="p p_place_footer">&COPY; Егор Котов</p></div>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <div class="footer__column-heading"><h3 class="h3 h3_place_footer">О Практикуме</h3></div>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <div class="footer__column-heading"><h3 class="h3 h3_place_footer">Соцсети</h3></div>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/youtube_color_white.svg" alt="Logo">YouTube</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Logo">ВКонтакте</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/tiktok_color_white.svg" alt="Logo">TikTok</a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
