Добавлена анимация в блоке header. Добавлен блок techniques.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,37 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
+      <section class="techniques">
+        <div class="section-title"><h1 class="h1 h1_place_techniques">Техники обучения</h1></div>
+        <div class="section-subtitle"><h2 class="h2 h2_place_techniques">Пять практик от Барабары Оакли</h2></div>
+        <div class="cards">
+         <div class="cards__item">
+          <img class="cards__image" src="/images/cards-attention.png" alt="photo">
+          <div class="cards__title">Два вида внимания</div>
+          <div class="cards__description">Глубокие знания возникают, если чередовать сфокусированное рассеянное мышление.</div>
+         </div>
+         <div class="cards__item">
+          <img class="cards__image" src="images/cards-recall.png" alt="photo">
+          <div class="cards__title">Recall</div>
+          <div class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</div> 
+        </div>
+         <div class="cards__item">
+          <img class="cards__image" src="images/cards-interliving.png" alt="photo">
+          <div class="cards__title">Интерливинг</div>
+          <div class="cards__description">Изучайте несколько навыков одновременно, они обогощают друг друга.</div>
+        </div>
+         <div class="cards__item">
+          <img class="cards__image" src="images/cards-question.png" alt="photo">
+          <div class="cards__title">Вопросы</div>
+          <div class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</div>
+        </div>
+         <div class="cards__item">
+          <img class="cards__image" src="images/cards-competence.png" alt="photo">
+          <div class="cards__title">Иллюзия компетентности</div>
+          <div class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</div>
+        </div>
+        </div>
+      </section>
       <section class="description">
         <div class="two-colums">
           <div class="two-colums__breif"><h3 class="h3 link">Главные проблемы в обучении</h3></div>
@@ -27,7 +58,6 @@
           </div>
         </div>
       </section>
-
       <section class="digits">
         <div class="digits__section-title"><h1 class="h1 h1_place_digits">Цифры и факты</h1></div>
         <div class="digits__section-subtitle"><h2 class="h2 h2_place_digits">Про учебу и мозг</h2></div>
@@ -68,7 +98,6 @@
           </div>
         </div>
       </section>
-
       <section class="feynman">
         <div class="feynman__title">
           <h1 class="h1 h1_place_feynman">Метод Фейнмана</h1>
@@ -83,7 +112,6 @@
           <img class="feynman__image-position" src="images/feynman.png" alt="feyman-png">
         </div>
       </section>
-
       <section class="kaufman">
         <div class="section-title section-title_theme_dark"><h1 class="h1 h1_place_kaufman">Принципы обучения</h1></div>
         <div class="section-subtitle section-subtitle_theme_dark"><h2 class="h2 h2_place_kaufman">от Джоша Кауфмана</h2></div>
