--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
+      <section class="description">
+        <div class="two-colums">
+          <div class="two-colums__breif"><h3 class="h3 link">Главные проблемы в обучении</h3></div>
+          <div class="two-colums__main-text">
+            <div class="two-colums__paragraph">Ни в школе, ни в институте нас не научат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зарубежка быстро выветривается и не приносит пользы.</div>
+            <div class="two-colums__paragraph"><span class="span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то мало где учат. Что с этим делать?</div>
+            <div class="two-colums__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются применяются на примере обучения в Практикуме</div>
+          </div>
+        </div>
+      </section>
       <section class="techniques">
         <div class="section-title"><h1 class="h1 h1_place_techniques">Техники обучения</h1></div>
         <div class="section-subtitle"><h2 class="h2 h2_place_techniques">Пять практик от Барабары Оакли</h2></div>
@@ -48,14 +58,38 @@
         </div>
         </div>
       </section>
-      <section class="description">
+      <section class="video">
+        <div class="section-title"><h1 class="h1 h1_place_video">Видео на TED</h1></div>
+        <div class="section-subtitle"><h2 class="h2 h2_place_video">Для тех, кто любит прокрастинировать</h2></div>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="720" height="405"
+          src="https://www.youtube.com/embed/arj7oStGLkU"
+          frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="720" height="405"
+          src="https://www.youtube.com/embed/5MgBikgcWnY"
+          frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
         <div class="two-colums">
-          <div class="two-colums__breif"><h3 class="h3 link">Главные проблемы в обучении</h3></div>
+          <div class="two-colums__breif"><h3 class="h3 link">История Барбары Оакли.</h3></div>
           <div class="two-colums__main-text">
-            <div class="two-colums__paragraph">Ни в школе, ни в институте нас не научат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зарубежка быстро выветривается и не приносит пользы.</div>
-            <div class="two-colums__paragraph"><span class="span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то мало где учат. Что с этим делать?</div>
-            <div class="two-colums__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются применяются на примере обучения в Практикуме</div>
+            <div class="two-colums__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</div>
           </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <div class="feynman__title">
+          <h1 class="h1 h1_place_feynman">Метод Фейнмана</h1>
+        </div>
+        <div class="feynman__subtitle">
+          <h2 class="h2 h2_place_feynman">Выучить не забыть</h2>
+        </div>
+        <div class="feynman__link">
+          <a class="link link_place_feynman" href="#">Подробнее -></a>
+        </div>
+        <div class="feynman__image">
+          <img class="feynman__image-position" src="images/feynman.png" alt="feyman-png">
         </div>
       </section>
       <section class="digits">
@@ -98,19 +132,18 @@
           </div>
         </div>
       </section>
-      <section class="feynman">
-        <div class="feynman__title">
-          <h1 class="h1 h1_place_feynman">Метод Фейнмана</h1>
-        </div>
-        <div class="feynman__subtitle">
-          <h2 class="h2 h2_place_feynman">Выучить не забыть</h2>
-        </div>
-        <div class="feynman__link">
-          <a class="link link_place_feynman" href="#">Подробнее -></a>
-        </div>
-        <div class="feynman__image">
-          <img class="feynman__image-position" src="images/feynman.png" alt="feyman-png">
-        </div>
+      <section class="khan">
+        <div class="khan__container">
+          <div class="khan__author">Салман Хан</div>
+          <div class="khan__title">Весь мир - школа</div>
+          <div class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</div>
+          <div class="khan__quote-author">Джордж Лукас</div>
+          <div class="khan__quote-author-subline">Кинорежиссер, продюсер</div>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="img">
+            <div class="khan__buy-link"><a href="#" class="link">Купить книгу -></a></div>
+          </div>
+          </div>
       </section>
       <section class="kaufman">
         <div class="section-title section-title_theme_dark"><h1 class="h1 h1_place_kaufman">Принципы обучения</h1></div>
@@ -159,6 +192,16 @@
         </div>
         <div class="kaufman__triangle">
           <img class="kaufman__triangle-image" src="images/kaufman-triangle.svg" alt="kaufman-triangle">
+        </div>
+      </section>
+      <section class="resources">
+        <div class="section-title">Полезные ресурсы</div>
+        <div class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</div>
+        <div class="resources__logo-zone">
+          <a class="link" href="#"><img class="resources__link" src="images/logo/resources-arzamas.svg" alt="logo"></a>
+          <a class="link" href="#"><img class="resources__link" src="images/logo/resources-n1.svg" alt="logo"></a>
+          <a class="link" href="#"><img class="resources__link" src="images/logo/resources-strelka.svg" alt="logo"></a>
+          <a class="link" href="#"><img class="resources__link" src="images/logo/resources-polka.svg" alt="logo"></a>
         </div>
       </section>
     </main>
